--- a/treasury/Anchor.toml
+++ b/treasury/Anchor.toml
@@ -1,5 +1,5 @@
 [toolchain]
-package_manager = "yarn"
+
 
 [features]
 resolution = true
@@ -15,5 +15,8 @@ url = "https://api.apr.dev"
 cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
+[test]
+startup_wait = 10000
+
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\""
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
